--- a/src/components/Cards/_Cards.scss
+++ b/src/components/Cards/_Cards.scss
@@ -5,6 +5,7 @@
   align-items: center;
 }
 .card{
+  
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(2, 1fr);
@@ -13,14 +14,20 @@
   
   padding-top: 60px;
 
-  @media (max-width: 1100px) {
+  @media screen and (max-width: 1100px) {
     grid-template-columns: repeat(3, 1fr);
   }
 
-  @media (max-width: 820px) {
+  @media screen and (max-width: 820px) {
     grid-template-columns: repeat(2, 1fr);
+    grid-column-gap: 0;
   }
-  
+
+  @media screen and (max-width: 420px) {
+    grid-template-columns: repeat(1, 1fr);
+    grid-column-gap: 0;
+  }
+
   
   
   .card__title{
@@ -38,13 +45,15 @@
     transition: 0.55s; 
     display: block; 
 
-    
+    @media screen and (max-width: 420px) {
+      width: 390px;
+    }
 
    &:hover {
     transform: scale(1.03); 
    }
 
-  @media (max-width: 820px) {
+  @media screen and (max-width: 820px) {
     width: 260px;
   }
  
