--- a/src/components/Form/_FormBlock.scss
+++ b/src/components/Form/_FormBlock.scss
@@ -9,8 +9,7 @@
   
   height: 180px;
 
-  @media (max-width: 820px) {
-    border: 1px solid red;
+  @media screen and (max-width: 820px) {
     padding: 55px;
     height: 80px;
   }
