--- a/src/components/Header/MenuBurger/_MenuBurger.scss
+++ b/src/components/Header/MenuBurger/_MenuBurger.scss
@@ -4,45 +4,75 @@
   position: fixed;
 
   width: 100vw;
-  height: 100vh;
+  height: 100%;
+
   top: 0;
-  left: 0;
-  transform: translateX(-200%);
+  left: -120%;
 
+  z-index: 10;
+  
   transition: all 0.4s;
+  
+  display: none;
 
+  @media screen and (max-width: 1020px) {
+    display: block;
 
+    left: -150%;
+  }
 
   .blur{
-    width: 100vw;
-    height: 100vh;
-    left: 30%;
-    backdrop-filter: blur(2px);
 
+    width: 100%;
+    height: 100%;
+    backdrop-filter: blur(2px);
+    left: 30%;
     position: absolute;
-    
+    @media screen and (max-width: 820px) {
+      left: 70%;
+      width: 79%;
+    }
+    @media screen and (max-width: 420px) {
+      left: 90%;
+    }
   }
 
   &__content{
 
     width: 30%;
-    height: 100vh;
+    height: 100%;
 
     display: flex;
     flex-direction: column;
     align-items: center;
 
-    background-color: $grey;
+    overflow: scroll;
 
+    background-color: $grey;
+    @media screen and (max-width: 820px) {
+      width: 70%;
+    }
+    @media screen and (max-width: 420px) {
+      width: 90%;
+    }
     h1{
       text-align: center;
       width: 100%;
       padding-bottom: 20px;
       border-bottom: 1px solid black;
     }
+    button{
+      display: block;
+      
+      @include button-style;
+      background-color: #d8413363;
+      border-radius: 10px;
+      padding: 12px;
+      margin: 20px 0 0 0;
+    }
   }
 }
 
 .active{
-  transform: translateX(0);
+  left: 0;
 }
