--- a/src/index.scss
+++ b/src/index.scss
@@ -7,14 +7,26 @@
     body{
       // background-color: #8730393f;
       display: block;
-      @media (max-width: 1080px) {
+      
+      @media screen and (max-width: 1080px) {
         display: flex;
+        justify-content: center;
       }
+
+      @media screen and (max-width: 640px) {
+        display: flex;
+        justify-content: flex-start;
+      }
+      
         header, section{
           max-width: 1100px;
           margin: 0 auto;
           
         }
+    }
+    a{
+      text-decoration: none;
+      color: inherit;
     }
 }
 
