change bug with hook usecallback

--- a/src/components/Search/_Search.scss
+++ b/src/components/Search/_Search.scss
@@ -45,7 +45,9 @@
       height: 28px;
       bottom: 3px;
       
-      right: 0;
+      
+      right: 25px;
+      
 
       &:hover{
         opacity: 1;
