--- a/src/components/Header/MenuBurger/_MenuBurger.scss
+++ b/src/components/Header/MenuBurger/_MenuBurger.scss
@@ -18,10 +18,11 @@
   @media screen and (max-width: 1020px) {
     display: block;
 
-    left: -150%;
+    left: -250%;
   }
 
   .blur{
+    border: 1px solid red;
 
     width: 100%;
     height: 100%;
@@ -30,10 +31,11 @@
     position: absolute;
     @media screen and (max-width: 820px) {
       left: 70%;
-      width: 79%;
+      width: 100vw;
     }
     @media screen and (max-width: 420px) {
       left: 90%;
+      width: 100vw;
     }
   }
 
