add basket logic

--- a/src/pages/Scss/_NotFound.scss
+++ b/src/pages/Scss/_NotFound.scss
@@ -7,7 +7,6 @@
   max-width: 500px;
 
   border-radius: 12px;
-  border: 1px solid #888888;
 
   background: $grey;
   color: #2e2e2e;
@@ -22,8 +21,8 @@
 
     padding: 10px;
 
-    width: 200px;
-    height: 50px;
+    width: 50%;
+    height: 100%;
 
     font-size: 22px;
     font-weight: 500;
