--- a/src/components/Cards/_Cards.scss
+++ b/src/components/Cards/_Cards.scss
@@ -1,4 +1,5 @@
 @import '../mixins';
+
 .card--wrapper{
   display: flex;
   justify-content: center;
@@ -110,10 +111,19 @@
        
         p{
           background-color: #873039;
-          border-radius: 20px;
+          border-radius: 30px;
           color: wheat;
-          margin: 3px;
-          padding: 3px;
+          margin: 5px;
+          padding: 7px;
+
+          text-align: center;
+
+          display: flex;
+          align-items: center;
+          justify-content: center;
+
+          width: 12px;
+          height: 12px;
         }
 
         img{
