--- a/src/components/Header/HeaderStyles.scss
+++ b/src/components/Header/HeaderStyles.scss
@@ -173,29 +173,31 @@ header{
     img{
       padding: 8px;
     }
+    .stateBasket{
+      display: flex;
+      align-items: center;
+      justify-content: center;
+  
+      background-color: #d8413363;
+  
+      border-radius:5px;
+      font-weight: 500;
+      font-size: 14px;
+      line-height: 15px;
+      
+  
+      
+      
+      
+  
+      width: 25px;
+      height: 25px;
+      
+    }
+    
   }
 
-  .stateBasket{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    color: white;
-
-    border-radius:5px;
-    font-weight: 500;
-    font-size: 12px;
-    line-height: 15px;
-    
-
-    text-align: center;
-    letter-spacing: 0.03em;
-    @include button-style;
-
-    width: 20px;
-    height: 20px;
-    
-  }
+  
 
   }
 }
