--- a/src/components/mixins.scss
+++ b/src/components/mixins.scss
@@ -11,7 +11,8 @@
   }
   &:active{
     background-color: #f3c6c2;
-    transform: translateY(1px);
+    transform: translateY(2px);
+    transition: all 0.01s;
   }
 }
 
