Добавил корзину, логику к ней, перенёс бизнес-логику в редакс и др.

--- a/src/components/Cards/_Cards.scss
+++ b/src/components/Cards/_Cards.scss
@@ -142,3 +142,21 @@
     }
   }
 }
+
+.error{
+  margin: 100px auto;
+  text-align: center;
+  width: 600px;
+  h1{
+
+    font-size: 42px;
+    font-weight: 700;
+  }
+
+  p{
+    font-size: 24px;
+
+
+  }
+
+}
