--- a/src/components/Form/_FormBlock.scss
+++ b/src/components/Form/_FormBlock.scss
@@ -19,7 +19,7 @@
     font-weight: 700;
     font-size: 30px;
     line-height: 37px;
-    letter-spacing: 0.02em;
+    // letter-spacing: 0.02em;
   }
   input{
     width: 155px;
@@ -30,7 +30,7 @@
     font-weight: 300;
     font-size: 14px;
     line-height: 15px;
-    letter-spacing: 0.02em;
+    // letter-spacing: 0.02em;
 
     color: #666565;
   }
