--- a/src/components/Header/HeaderStyles.scss
+++ b/src/components/Header/HeaderStyles.scss
@@ -8,7 +8,7 @@ header{
   font-weight: 400;
   font-size: 15px;
   line-height: 17px;
-  letter-spacing: 0.03em;
+  // letter-spacing: 0.03em;
 
   .menu-btn{
     width: 30px;
