--- a/src/components/Info-title/_InfoTitle.scss
+++ b/src/components/Info-title/_InfoTitle.scss
@@ -4,7 +4,7 @@ font-size: 36px;
 line-height: 44px;
 
 text-align: center;
-letter-spacing: 0.04em;
+// letter-spacing: 0.04em;
 text-transform: uppercase;
 margin: 40px;
 }
