--- a/src/components/InformationBlock/_InformationBlock.scss
+++ b/src/components/InformationBlock/_InformationBlock.scss
@@ -17,7 +17,7 @@
     font-weight: 400;
     font-size: 30px;
     line-height: 37px;
-    letter-spacing: 0.02em;
+    // letter-spacing: 0.02em;
 
   }
 
