--- a/src/components/Product/_Product.scss
+++ b/src/components/Product/_Product.scss
@@ -29,7 +29,7 @@
       font-weight: 500;
       font-size: 24px;
       line-height: 29px;
-      letter-spacing: 0.03em;
+      // letter-spacing: 0.03em;
     }
 
     h2{
