refactoring to typescript

--- a/src/components/Header/HeaderStyles.scss
+++ b/src/components/Header/HeaderStyles.scss
@@ -107,7 +107,7 @@ header{
     text-align: left;
     }
 }
-  .dropdown:checked .dropdown-content {
+  .dropdown:hover .dropdown-content {
     display: block;
 }
 
