--- a/src/components/SortPopup/_SortPopup.scss
+++ b/src/components/SortPopup/_SortPopup.scss
@@ -23,7 +23,6 @@
 
         }
         button{
-          
           font-size: 14px;
           font-weight: 700;
 
@@ -33,7 +32,8 @@
           border: none;
           background: inherit;
           border-bottom: 2px dashed $red;
-
+          
+          cursor: pointer;
         }
       }
     }
