--- a/src/pages/Scss/_Basket.scss
+++ b/src/pages/Scss/_Basket.scss
@@ -135,7 +135,9 @@
         border-radius: 20px;
       }
 
-      
+      .disabledBtn{
+        @include disabled-button-style;
+      }
 
     }
   }
@@ -148,12 +150,12 @@
     width: 40px;
     height: 40px;
 
-    background-color: #e0e0e0;
+    background-color: #b9b9b983;
     padding: 6px;
     border-radius: 30px;
     &:hover{
-      opacity: 0.5;
-      background-color: #e0e0e0;
+      opacity: 0.7;
+      background-color: #b9b9b983;
     }
   }
 
