--- a/src/components/Footer/_Footer.scss
+++ b/src/components/Footer/_Footer.scss
@@ -1,9 +1,9 @@
 @import '../mixins';
 
-.footer{
+.footer {
   @include info-Block-style;
-  
-  .footer__content{
+
+  .footer__content {
     max-width: 1100px;
     margin: 0 auto;
     padding: 100px 100px;
@@ -14,18 +14,18 @@
     @media screen and (max-width: 820px) {
       padding: 10px;
     }
-    .footer__logo{
+    .footer__logo {
       font-weight: 400;
       font-size: 14px;
       line-height: 22px;
 
       width: 200px;
     }
-    .footer__links{
+    .footer__links {
       display: flex;
       flex-direction: column;
-      
-      a{
+
+      a {
         font-weight: 400;
         font-size: 14px;
         line-height: 22px;
@@ -33,18 +33,18 @@
         padding: 5px;
 
         text-decoration: none;
-        color: #CBCFD4;
+        color: #cbcfd4;
 
         @media screen and (max-width: 820px) {
           font-size: 10px;
         }
 
-        img{
+        img {
           margin-right: 15px;
         }
       }
 
-      h1{
+      h1 {
         padding: 5px;
 
         font-weight: 700;
@@ -54,33 +54,28 @@
       }
     }
   }
-
-  
-
 }
 
-.copiration{
-  background-color: white;
-  color: black;
+.copiration {
+  background-color: var(--background-color);
 
   display: flex;
   justify-content: space-between;
 
   max-width: 1100px;
   margin: 0 auto;
-  
+
   padding: 8px 8px;
 
-  p{
+  p {
     font-weight: 400;
     font-size: 14px;
     line-height: 22px;
-    color: #212121;
+    color: var(--text-color);
   }
 
-  a{
+  a {
     text-decoration: none;
-    color: #212121;
+    color: var(--text-color);
   }
-  
 }
