--- a/src/components/Header/MenuBurger/_MenuBurger.scss
+++ b/src/components/Header/MenuBurger/_MenuBurger.scss
@@ -1,6 +1,6 @@
 @import '../../mixins.scss';
 
-.menu{
+.menu {
   position: fixed;
 
   width: 100vw;
@@ -10,9 +10,9 @@
   left: -120%;
 
   z-index: 10;
-  
+
   transition: all 0.4s;
-  
+
   display: none;
 
   @media screen and (max-width: 1020px) {
@@ -21,12 +21,12 @@
     left: -250%;
   }
 
-  .blur{
+  .blur {
     width: 100%;
     height: 100%;
 
     backdrop-filter: blur(2px);
-    
+
     left: 30%;
     position: absolute;
     @media screen and (max-width: 820px) {
@@ -39,8 +39,7 @@
     }
   }
 
-  &__content{
-
+  &__content {
     width: 30%;
     height: 100%;
 
@@ -50,31 +49,33 @@
 
     overflow: scroll;
 
-    background-color: $grey;
+    background-color: var(--background-card);
+    color: var(--text-color);
+
     @media screen and (max-width: 820px) {
       width: 70%;
     }
     @media screen and (max-width: 420px) {
       width: 90%;
     }
-    h1{
+    h1 {
       text-align: center;
       width: 100%;
       padding-bottom: 20px;
-      border-bottom: 1px solid black;
+      border-bottom: 1px solid var(--border-color);
     }
-    button{
+    button {
       display: block;
-      
+
       @include button-style;
-      background-color: #d8413363;
       border-radius: 10px;
+
       padding: 12px;
       margin: 20px 0 0 0;
     }
   }
 }
 
-.active{
+.active {
   left: 0;
 }
