--- a/src/components/Product/_Product.scss
+++ b/src/components/Product/_Product.scss
@@ -1,45 +1,46 @@
 @import '../mixins';
 
-.product{
+.product {
   display: flex;
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
 
-  background: $grey;
+  background: var(--background-color);
+  color: var(--text-color);
 
-  .product__card{
+  .product__card {
     width: 550px;
     height: 250px;
     display: flex;
 
-    
-    .product__card__title{
+    @media screen and (max-width: 1100px) {
+      margin-bottom: 40px;
+    }
 
+    .product__card__title {
       width: 320px;
     }
-    
-    h1,h2{
+
+    h1,
+    h2 {
       padding-top: 10px;
       padding-bottom: 10px;
-      
     }
 
-    h1{
+    h1 {
       font-weight: 500;
       font-size: 24px;
       line-height: 29px;
-      // letter-spacing: 0.03em;
     }
 
-    h2{
+    h2 {
       font-weight: 300;
       font-size: 16px;
       line-height: 20px;
-
     }
 
-    button{
+    button {
       width: 80px;
       height: 30px;
       bottom: 0;
