--- a/src/components/Slider/SliderStyles.scss
+++ b/src/components/Slider/SliderStyles.scss
@@ -1,22 +1,19 @@
 @import '../mixins';
 
-.slider{
+.slider {
   display: flex;
   height: 377px;
-  
+
   @media screen and (max-width: 820px) {
     height: 100%;
 
-    display: flex;
     flex-direction: column;
     width: 70%;
     margin: 0 auto;
-    background-color: $grey;
-    border-radius: 12px;
+    background-color: var(--background-card);
   }
 
-  
-  .slider__leftBlock{
+  .slider__leftBlock {
     margin-right: auto;
 
     @media screen and (max-width: 820px) {
@@ -24,27 +21,24 @@
       text-align: center;
     }
 
-    h1{
+    h1 {
       font-weight: 400;
       font-size: 30px;
       line-height: 37px;
-      // letter-spacing: 0.02em;
     }
 
-    h2{
+    h2 {
       font-weight: 700;
       font-size: 55px;
       line-height: 67px;
-      // letter-spacing: 0.04em;
     }
 
-    button{
+    button {
       font-weight: 600;
       font-size: 16px;
       line-height: 20px;
-      // letter-spacing: 0.03em;
 
-      @include button-style;      
+      @include button-style;
 
       width: 240px;
       height: 55px;
@@ -52,61 +46,52 @@
       border-radius: 10px;
 
       cursor: pointer;
-      
     }
-
-    
   }
-  .slider__rightBlock{
+  .slider__rightBlock {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
 
     margin-left: auto;
-    // background: url('./running_shoes.svg');
 
     width: 556px;
     height: inherit;
 
     @media screen and (max-width: 820px) {
-
       margin: 0 auto;
       margin-top: 80px;
 
-
       width: 456px;
-      h1, h2{
+      h1,
+      h2 {
         display: none;
       }
-      img{
+      img {
         margin: 0 auto;
+        width: 30px;
       }
     }
 
-    h1{
+    h1 {
       font-weight: 700;
       font-size: 24px;
       line-height: 29px;
       text-align: right;
-      // letter-spacing: 0.05em;
       text-decoration-line: line-through;
       text-transform: uppercase;
-
-      
     }
 
-    h2{
+    h2 {
       font-weight: 700;
       font-size: 42px;
       line-height: 51px;
       text-align: right;
-      // letter-spacing: 0.02em;
       text-transform: uppercase;
 
       color: $red;
-
     }
-    img{
+    img {
       margin-left: auto;
       width: 290px;
       height: 390px;
@@ -114,4 +99,3 @@
     }
   }
 }
-
