--- a/src/index.scss
+++ b/src/index.scss
@@ -1,42 +1,35 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
-
-*{
+@import './components/mixins.scss';
+* {
   font-family: 'Montserrat', sans-serif;
   font-style: normal;
 
-  //Внутри есть оригинальные леттер спассинг для элементов
   letter-spacing: 0.1rem;
-  // letter-spacing: 2px;
-  
-    body{
-      // background-color: #8730393f;
-      display: block;
-      
-      @media screen and (max-width: 1080px) {
-        display: flex;
-        justify-content: center;
-      }
 
-      @media screen and (max-width: 640px) {
-        display: flex;
-        justify-content: flex-start;
-      }
-      
-        header, section{
-          max-width: 1100px;
-          margin: 0 auto;
-          
-        }
+  body {
+    display: block;
+
+    background-color: var(--background-color);
+    color: var(--text-color);
+    transition: background-color 350ms linear;
+
+    @media screen and (max-width: 1080px) {
+      display: flex;
+      justify-content: center;
     }
-    a{
-      text-decoration: none;
-      color: inherit;
+
+    @media screen and (max-width: 640px) {
+      display: flex;
+      justify-content: flex-start;
     }
+
+    header,
+    section {
+      max-width: 1100px;
+      margin: 0 auto;
+    }
+  }
+  a {
+    text-decoration: none;
+  }
 }
-
-
-
-
-
-
